--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"https://www.knolskape.com","creator":"http://perfmonkey.com","rand":0.5613863449543715,"created_at":"2014-07-30T05:45:59.246Z"}
